drivers/media/video/cx88/cx88-blackbird.c
@@ -1125,12 +1125,12 @@ static int mpeg_release(struct file *file)
 
 	/* Make sure we release the hardware */
 	drv = cx8802_get_driver(dev, CX88_MPEG_BLACKBIRD);
-	mutex_unlock(&dev->core->lock);
-
 	if (drv)
 		drv->request_release(drv);
 
 	atomic_dec(&dev->core->mpeg_users);
+
+	mutex_unlock(&dev->core->lock);
 
 	return 0;
 }
